# lazyagent

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.agents/: AGENTS.md
.github/workflows/: publish-crates.yml  release.yml
docs/: TODOs.md
docs/plans/: 2026-03-09-tmux-session-manager-design.md  2026-03-12-tui-beautification-design.md
src/: app.rs  bg.rs  config.rs  e2e_tests.rs  event.rs  log.rs  main.rs  session.rs
src/config/: keys.rs  layout.rs  mod.rs  theme.rs  timing.rs
src/protocol/: binding.rs  mod.rs  provider.rs  status.rs
src/provider/: claude.rs  codex.rs
src/tmux/: mod.rs
src/tui/: banner.txt  detail.rs  header.rs  help.rs  help_overlay.rs  layout.rs  mod.rs  sidebar.rs  theme.rs
