[package]
name = "lazyagent"
version = "0.2.0"
edition = "2021"
description = "A lazygit-style TUI for managing AI coding agent sessions"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
dirs = "6"
anyhow = "1"
ansi-to-tui = "7"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
glob-match = "0.2"
